# minetest

./: .gitignore  Cargo.toml  README.md
resources/shaders/: cube.wgsl  test.wgsl
src/: application.rs  main.rs  util.rs
src/game/: block.rs  chunk.rs  mod.rs  player.rs  player2.rs  renderables.rs  units.rs  world.rs
src/game/components/: collision.rs  input.rs  mod.rs  spatial.rs  time.rs
src/game/generation/: active_block.rs  mod.rs  slice.rs  stack.rs  units.rs  world.rs  worldblocks.rs
src/graphics/: application.rs  camera.rs  cube_render.rs  depthtexture.rs  metrics.rs  mod.rs  projection.rs  state.rs  texture2d.rs  vertex.rs
src/graphics/cube_render/: cube.wgsl  cube_instance.rs  cube_vertex.rs  mod.rs
src/graphics/text_render/: character.rs  font.rs  font_instance.rs  font_vertex.rs  mod.rs  sentence.rs  shader.wgsl  text_style.rs
